--- a/css/gems.css
+++ b/css/gems.css
@@ -1,6 +1,6 @@
 /* Select the image with a id of ruby */
 
-/*selector for ruby goes here */  {
+/*selector for ruby goes here */ #ruby  {
   position: absolute;
   z-index: 1;
   top: 315px;
@@ -9,7 +9,7 @@
 
 /* Select the image with class of emerald */
 
-/*selector for emerald goes here */  {
+/*selector for emerald goes here */ .emerald {
   position: absolute;
   z-index: 2;
   top: 350px;
