automatically backed up by learn

--- a/css/gems.css
+++ b/css/gems.css
@@ -35,7 +35,7 @@
 }
 
 /* Select the image that has ad id of diamond */
-/*selector for diamond goes here */ {
+/*selector for diamond goes here */ #diamon {
   position: absolute;
   z-index: 3;
   top: 300px;
